# jitsi-monorepo

./: README.md  WORKSPACE  fmj.BUILD
bccontrib/: BUILD.bazel  pom.xml
gpl-dependencies/: BUILD
ice4j/: BUILD  pom.xml
ice4j/src/main/java/org/ice4j/attribute/: ReservationTokenAttribute.java
jicoco/jicoco/: BUILD  pom.xml
jicoco/jicoco-kotlin/: BUILD
jicofo/: BUILD  pom.xml
jitsi/: BUILD
jitsi/lib/installer-exclude/: bcprov.manifest.mf
lgpl-dependencies/: BUILD
libjitsi/: BUILD.bazel  pom.xml
libjitsi/src/org/jitsi/impl/neomedia/codec/audio/silk/: NSQ.java  NSQDelDec.java
libjitsi/src/org/jitsi/impl/neomedia/transform/dtls/: DatagramTransportImpl.java  DtlsControlImpl.java  DtlsPacketTransformer.java  TlsClientImpl.java  TlsServerImpl.java
libjitsi/src/org/jitsi/impl/neomedia/transform/srtp/: CryptoBenchmark.java
media-transform/: BUILD
media-transform/src/main/kotlin/org/jitsi/nlj/dtls/: TlsServerImpl.kt
osgi/: BUILD.bazel
rtp/: BUILD.bazel
sctp/jniwrapper/: BUILD
sctp/jniwrapper/native/src/main/resources/lib/linux/: BUILD
sctp/sctp/: BUILD
srtp/: BUILD.bazel
srtp/src/main/native/: BUILD
stats/: BUILD
tools/jni/: BUILD
usrsctp/usrsctplib/: BUILD
utils/jitsi-utils/: BUILD.bazel
utils/jitsi-utils-kotlin/: BUILD
videobridge/: BUILD.bazel  pom.xml
xmpp-extensions/: BUILD.bazel
zrtp4j/: BUILD
zrtp4j/src/gnu/java/zrtp/zidfile/: ZidRecord.java
