load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "libjitsi",
    srcs = glob(
        include = ["src/org/jitsi/**/*.java"],
    ),
    deps = [
        "//bccontrib",
        "//lgpl-dependencies",
        "//osgi",
        "//rtp",
        "//utils/jitsi-utils",
        "//zrtp4j",
        "@fmj",
        "@maven//:ch_imvs_sdes4j",
        "@maven//:com_googlecode_json_simple_json_simple",
        "@maven//:net_java_dev_jna_jna",
        "@maven//:org_bouncycastle_bcpkix_jdk15on",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_opentelecoms_sdp_java_sdp_nist_bridge",
        "@maven//:org_opentelecoms_sdp_sdp_api",
        "@maven//:org_osgi_org_osgi_core",
    ],
)

#java_test(
#    name = "tests",
#    srcs = glob(["src/test/java/org/jitsi/**/*.java"]),
#    test_class = "org.jitsi.impl.osgi.framework.OSGiTest",
#    deps = [
#        ":jitsi-utils",
#	"@maven//:org_osgi_org_osgi_core",
#        "@maven//:junit_junit",
#    ],
#)
