load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "rtp",
    srcs = glob([
        "src/main/kotlin/org/jitsi/**/*.kt",
        "src/main/kotlin/org/jitsi/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//srtp",
        "//utils/jitsi-utils",
        "@maven//:com_github_kotlin_graphics_kotlin_unsigned",
    ],
)
