load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "srtp",
    srcs = glob(["src/main/java/org/jitsi/**/*.java"]),
    deps = [
        "//bccontrib",
        "//utils/jitsi-utils",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
        "@maven//:org_igniterealtime_smack_smack_core",
        "@maven//:org_igniterealtime_smack_smack_extensions",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_jxmpp_jxmpp_core",
        "@maven//:org_jxmpp_jxmpp_jid",
        "@maven//:xpp3_xpp3",
    ],
)

#java_test(
#    name = "tests",
#    srcs = glob(["src/test/java/org/jitsi/**/*.java"]),
#    test_class = "org.jitsi.impl.osgi.framework.OSGiTest",
#    deps = [
#        ":jitsi-utils",
#	"@maven//:org_osgi_org_osgi_core",
#        "@maven//:junit_junit",
#    ],
#)
