load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "videobridge",
    srcs = glob([
        "src/main/java/org/jitsi/**/*.java",
        "src/main/kotlin/org/jitsi/**/*.kt",
    ]),
    deps = [
        "//ice4j",
        "//media-transform",
        "//rtp",
        "//utils/jitsi-utils",
        "//xmpp-extensions",
        "@maven//:com_github_spotbugs_spotbugs_annotations",
        "@maven//:com_googlecode_json_simple_json_simple",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_bouncycastle_bcpkix_jdk15on",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
        "@maven//:org_bouncycastle_bctls_jdk15on",
        "@maven//:org_igniterealtime_smack_smack_core",
        "@maven//:org_igniterealtime_smack_smack_extensions",
        "@maven//:org_jetbrains_annotations",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jxmpp_jxmpp_core",
        "@maven//:org_jxmpp_jxmpp_jid",
        "@maven//:org_osgi_org_osgi_core",
    ],
)

#java_test(
#    name = "tests",
#    srcs = glob(["src/test/java/org/jitsi/**/*.java"]),
#    test_class = "org.jitsi.impl.osgi.framework.OSGiTest",
#    deps = [
#        ":jitsi-utils",
#	"@maven//:org_osgi_org_osgi_core",
#        "@maven//:junit_junit",
#    ],
#)
