load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "jitsi-utils",
    srcs = glob(["src/main/java/org/jitsi/**/*.java"]),
    deps = [
	"@maven//:org_jetbrains_annotations",
	"@maven//:com_googlecode_json_simple_json_simple",
	"@maven//:com_github_spotbugs_spotbugs_annotations",
	"@maven//:com_google_guava_guava",
	"@maven//:net_java_dev_jna_jna",
    ],
)

#java_test(
#    name = "tests",
#    srcs = glob(["src/test/java/org/jitsi/**/*.java"]),
#    test_class = "org.jitsi.impl.osgi.framework.OSGiTest",
#    deps = [
#        ":jitsi-utils",
#	"@maven//:org_osgi_org_osgi_core",
#        "@maven//:junit_junit",
#    ],
#)

